--- a/AuthTodoApp.csproj
+++ b/AuthTodoApp.csproj
@@ -9,8 +9,7 @@
   <ItemGroup>
     <PackageReference Include="DotNetEnv" Version="3.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.0" /> <!-- Downgraded to 6.0.0 -->
-    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.0" /> <!-- Downgraded to 6.0.0 -->
-    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="6.0.0" /> <!-- Downgraded to 6.0.0 -->
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.0" /> <!-- Downgraded to 6.0.0 --> <!-- Downgraded to 6.0.0 -->
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.0">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
